--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -35,3 +35,5 @@ $color_button_rating: rgb(28, 184, 65);
 $color_button_read: rgb(202, 60, 60);
 $color_button_waiting: rgb(223, 117, 20);
 $color_button_viewed: rgb(66, 184, 221);
+$color_table_th: #81bef7;
+$color_body: #e6e6e6;
