--- a/app/views/layouts/_search_book.html.erb
+++ b/app/views/layouts/_search_book.html.erb
@@ -5,7 +5,7 @@
         <strong>
           <%= t ".search_book" %>
           <div class="search">
-            <input id="search-box" class="search-box" name="search-box" type="text">
+            <input id="search-box" class="search-box col-md-4" name="search-box" type="text">
             <label for="search-box">
               <span class="glyphicon glyphicon-search search-icon"></span>
             </label>
