Allow review books

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -1,35 +1,14 @@
-$color_c1: #777;
-$color_c2: #fff;
-$color_c3: #f4ed16;
-$gray-medium-light: #eaeaea;
-$color-bbb: #bbb;
-$color_g1: #222;
-$color_g3: #555;
-$color_red: red;
-$color_g4: #e8e8e8;
 $color_blue: blue;
+$color_white: white;
 $color_yellow: yellow;
-$color_a1: #1616ad;
-$color_a2: #0c720c;
+$color_red: red;
 $color_update: #00FF00;
+$color_update_title: #006400;
 $color_rating: #0033CC;
 $color_read: #FF0000;
 $color_waiting: #FFFF33;
 $color_viewed: #660099;
-$color_badge: #97FFFF;
-$color_nav: #ADFF2F;
-$color_update_title: #006400;
-$color_rating_title: #191970;
-$color_read_title: #C60000;
-$color_viewed_title: #8B0A50;
-$color_waiting_title: #FFA500;
-$color_rank: #551A8B;
-$color_white: white;
-$color_content1: #ebebeb;
-$color_black: black;
-$color_search: #008080;
-$color_slogan: #cc0000;
-$color_title: #000000;
+$color_gray_darker: #5b5b5b;
 $color_button_shadow: rgba(0, 0, 0, 0.2);
 $color_button_rating: rgb(28, 184, 65);
 $color_button_read: rgb(202, 60, 60);
@@ -37,3 +16,12 @@ $color_button_waiting: rgb(223, 117, 20);
 $color_button_viewed: rgb(66, 184, 221);
 $color_table_th: #81bef7;
 $color_body: #e6e6e6;
+$color_slogan: #cc0000;
+$color_gray_lighter: #eaeaea;
+$color_white_darker: #f1f3fa;
+$color_blue_gray: #5a7391;
+$color_blue_darker: #5b9bd1;
+$color_white2: #f0f4f7;
+$color_gray2: #93a3b5;
+$color_white3: #fafcfd;
+$color_white4: #f6f9fb;
