--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,42 @@
-<header id="scl" class="relative">
-  <%= render "layouts/menu" %>
+<header>
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        </button>
+        <%= link_to t(".book_review"), root_path, id: "logo", class: "navbar-brand" %>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to t(".home"), root_path %></li>
+          <li><%= link_to t(".help"), help_path %></li>
+          <li><%= link_to t(".category"), books_path %></li>
+          <% if logged_in? %>
+            <% if current_user.admin? %>
+              <li><%= link_to t(".manager"), admin_admin_index_path %></li>
+            <% end %>
+            <li><%= link_to t(".users"), users_path %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <%= t ".account" %> <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to t(".profile"), current_user %></li>
+                <li><%= link_to t(".settings"), edit_user_path(current_user) %></li>
+                <li class="divider"></li>
+                <li><%= link_to t(".logout"), logout_path, method: :delete %></li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to t(".login"), login_path %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
   <%= render "layouts/slogan" %>
 </header>
