--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,52 @@
 <% provide :title, @user.name %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
-        <%= @user.email %> |
-        <%= @user.address %>
-    </section>
-  </aside>
+<div class="row profile">
+  <div class="col-md-3">
+    <div class="profile-sidebar">
+      <div class="profile-userpic">
+        <center><%= gravatar_for @user %></center>
+      </div>
+      <div class="profile-usertitle">
+        <div class="profile-usertitle-name">
+          <%= @user.name %>
+        </div>
+        <div class="profile-usertitle-job">
+          <%= t ".developer" %>
+        </div>
+        <div class="profile-usertitle-email">
+          <%= @user.email %>
+        </div>
+        <div class="profile-usertitle-address">
+          <%= @user.address %>
+        </div>
+      </div>
+      <div class="profile-userbuttons">
+        <button type="button" class="btn btn-success btn-sm">
+          <%= t ".follow" %>
+        </button>
+      </div>
+      <div class="profile-usermenu">
+        <ul class="nav">
+          <li class="active">
+            <a href="#">
+            <i class="glyphicon glyphicon-home"></i>
+            Overview </a>
+          </li>
+          <li>
+            <%= link_to edit_user_path(current_user) do %>
+              <i class="glyphicon glyphicon-user" ></i>
+              <%= t ".account_settings" %>
+            <% end %>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+            <i class="glyphicon glyphicon-ok"></i>
+            <%= t ".request" %> </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-9">
+    <div class="profile-content"></div>
+  </div>
 </div>
