--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -20,16 +20,21 @@
           <li>
             <%= link_to t(".manage_authors"), admin_authors_path, class: "fa fa-bar-chart" %>
           </li>
-          <li><%= link_to t(".manage_books"), admin_books_path, class: "fa fa-bar-chart" %></li>
           <li>
             <%= link_to t(".manage_categories"), admin_categories_path,
               class: "fa fa-bar-chart" %>
+          </li>
+          <li>
+            <%= link_to t(".manage_books"), admin_books_path, class: "fa fa-bar-chart" %>
           </li>
           <li>
             <%= link_to t(".manage_feedbacks"), admin_feedbacks_path, class: "fa fa-bar-chart" %>
           </li>
           <li>
             <%= link_to t(".manage_reviews"), admin_reviews_path, class: "fa fa-bar-chart" %>
+          </li>
+          <li>
+            <%= link_to t(".manage_comments"), admin_comments_path, class: "fa fa-bar-chart" %>
           </li>
         </ul>
       </div>
