--- a/app/views/layouts/_slogan.html.erb
+++ b/app/views/layouts/_slogan.html.erb
@@ -1,10 +1,10 @@
-<div class = "header-text">
-  <div class="container fix">
-    <div class="row wow fadeInUp">
+<div class="header-text">
+  <div class="container">
+    <div class="row wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
       <div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center">
         <div class="jumbotron">
-          <h1 class="text-white text-uppercas" id="slogan">
-            <%= t ".slogan", id: "slogan" %>
+          <h1 class="text-uppercase" id="slogan" >
+            <%= t ".slogan" %>
           </h1>
         </div>
         <div class="space-40"></div>
