--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -1,10 +1,43 @@
 <div class="row">
   <div class="col-md-12">
     <h1><%= t ".manage_book" %></h1>
+    <p>
+      <%= link_to t(".refresh"), admin_books_path, class: "btn btn-primary" %>
+      <%= link_to t(".search_name"), "#", data: {toggle: "modal", target: "#search_id"}, class: "btn btn-primary" %>
+      <%= link_to t(".new_book"), "#", data: {toggle: "modal", target: "#new_book_id"}, class: "btn btn-primary" %>
+    </p>
     <%= paginate @books, theme: "twitter-bootstrap-3" %>
     <%= render "book" %>
     <%= paginate @books, theme: "twitter-bootstrap-3" %>
-    <h2><%= t ".new_book" %></h2>
-    <%= render "new_book" %>
+  </div>
+</div>
+<div id="new_book_id" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title"><%= t ".new_book" %></h4>
+      </div>
+      <div class="modal-body">
+        <%= render "new_book" %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal"><%= t ".close" %></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="search_id" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title"><%= t ".search_name" %></h4>
+      </div>
+      <div class="modal-body">
+        <%= render "search" %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal"><%= t ".close" %></button>
+      </div>
+    </div>
   </div>
 </div>
