--- a/app/views/admin/categories/_category.html.erb
+++ b/app/views/admin/categories/_category.html.erb
@@ -8,10 +8,31 @@
             class: "btn btn-danger", data: {confirm: t(".you_sure")} %>
         </td>
         <td>
-          <%= link_to t(".edit"), edit_admin_category_path(category),
-            class: "btn btn-primary" %>
+          <%= link_to t(".edit"), "#", data: {toggle: "modal",
+            target: "#edit_name_#{category.id}"}, class: "btn btn-primary" %>
         </td>
       </tr>
     </tbody>
   </table>
+  <div id="edit_name_<%=category.id%>" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title"><%= t ".edit_category" %></h4>
+        </div>
+        <div class="modal-body">
+          <%= form_for [:admin, category] do |f| %>
+            <%= f.label :name, t(".edit_name") %>
+            <%= f.text_field :name, class: "form-control" %>
+            <%= f.submit t(".save"), class: "btn btn-primary" %>
+          <% end %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">
+            <%= t ".close" %>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
