--- a/app/views/admin/feedbacks/index.html.erb
+++ b/app/views/admin/feedbacks/index.html.erb
@@ -1,7 +1,26 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <h1><%= t ".managefeedback" %></h1>
+    <p>
+      <%= link_to t(".refresh"), admin_feedbacks_path, class: "btn btn-primary" %>
+      <%= link_to t(".search_content"), "#", data: {toggle: "modal", target: "#search_id"}, class: "btn btn-primary" %>
+    </p>
     <%= render "feedback" %>
     <%= paginate @feedbacks, theme: "twitter-bootstrap-3" %>
+  </div>
+</div>
+<div id="search_id" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title"><%= t ".search_content" %></h4>
+      </div>
+      <div class="modal-body">
+        <%= render "search" %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal"><%= t ".close" %></button>
+      </div>
+    </div>
   </div>
 </div>
