--- a/app/views/admin/reviews/_list_review.html.erb
+++ b/app/views/admin/reviews/_list_review.html.erb
@@ -11,9 +11,30 @@
             class: "btn btn-danger", data: {confirm: t(".you_sure")} %>
         </td>
         <td class="col-md-1">
-          <%= link_to t(".view"), admin_review_path(review), class: "btn btn-info" %>
+          <%= link_to t(".view"), "#{}",data: {toggle: "modal",
+            target: "#review-#{review.id}"}, class: "btn btn-info" %>
         </td>
       </tr>
     </tbody>
   </table>
+  <div id="review-<%=review.id%>" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title"><%= t ".view_review" %></h4>
+        </div>
+        <div class="modal-body">
+          <h4><%= t ".name_user" %></h4>
+          <h2><%= review.user_name %></h2>
+          <h4><%= t ".num_rate" %> <%= review.num_rate %></h4>
+          <h4><%= t ".name_book" %> <%= review.book_title %></h4>
+          <h4><%= t ".content" %></h4>
+          <p><%= review.content %></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal"><%= t ".close" %></button>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
