--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,8 +1,28 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <h1><%= t ".manage_users" %></h1>
-      <%= paginate @user, theme: "twitter-bootstrap-3" %>
-      <%= render "user" %>
-      <%= paginate @user, theme: "twitter-bootstrap-3" %>
+    <p>
+      <%= link_to t(".refresh"), admin_users_path, class: "btn btn-primary" %>
+      <%= link_to t(".search_name"), "#", data: {toggle: "modal", target: "#search_name_id"}, class: "btn btn-primary" %>
+    </p>
+    <%= render "not_found" %>
+    <%= paginate @user, theme: "twitter-bootstrap-3" %>
+    <%= render "user" %>
+    <%= paginate @user, theme: "twitter-bootstrap-3" %>
+  </div>
+</div>
+<div id="search_name_id" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title"><%= t ".search_name" %></h4>
+      </div>
+      <div class="modal-body">
+        <%= render "search_name" %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal"><%= t ".close" %></button>
+      </div>
+    </div>
   </div>
 </div>
