--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -354,3 +354,17 @@ h4{
 .float-right {
   float: right;
 }
+
+/*form-mark*/
+
+#row-mark{
+  text-shadow: 0 1px 1px $color_gray_lighter;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid $color_button_waiting;
+  padding: 20px 20px;
+}
+
+#title_status{
+  color: $color_button_waiting;
+}
