--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,5 +10,7 @@
   <%= f.password_field :password, class: "form-control" %>
   <%= f.label :password_confirmation, t(".confirmation") %>
   <%= f.password_field :password_confirmation, class: "form-control" %>
+  <%= f.label :avatar, t(".avatar") %>
+  <%= f.file_field :avatar %>
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
 <% end %>
