--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,11 +2,16 @@
 <% provide :button_text, t(".save_changes") %>
 <h1><%= t ".update" %></h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= render "form" %>
-    <div class="gravatar_edit">
-      <%= gravatar_for @user %>
-      <%= link_to t(".change"), Settings.gra_email, target: "_blank" %>
-    </div>
-  </div>
+  <table>
+    <tbody>
+      <tr>
+        <td class="col-md-4">
+          <%= image_tag @user.avatar.url %>
+        </td>
+        <td class="col-md-6">
+          <%= render "form" %>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
