--- a/app/views/admin/users/_search_name.html.erb
+++ b/app/views/admin/users/_search_name.html.erb
@@ -1,4 +1,4 @@
 <%= form_tag admin_users_path, method: :get do %>
-  <%= text_field_tag :search, params[:name], placeholder: t(".enter_search") %>
+  <%= text_field_tag :search, params[:search], placeholder: t(".enter_search") %>
   <%= submit_tag t(".search") %>
 <% end %>
